removing Katherine Koch from staff pages. Fixing too small font size.

--- a/app/assets/stylesheets/ualib-custom.scss
+++ b/app/assets/stylesheets/ualib-custom.scss
@@ -1756,6 +1756,7 @@ ul.foot-nav{
 	width:10px;
 }
 .a-profile{
+	font-size:20px;
 	margin-top: 20px;
 }
 .a-profile .glyphicon{
